--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,9 @@ pipeline {
     stages {
         stage('build') {
             steps {
-                sh 'node --version'
+                withAWS(region: 'us-east-2') {
+                    aws iam list-roles
+                }
             }
         }
     }
