--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 /* Requires the Docker Pipeline plugin */
 pipeline {
-    agent { docker { image 'node:16.17.1-alpine' } }
+    agent { docker { image 'amazon/aws-cli' } }
     stages {
         stage('build') {
             steps {
