--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,11 @@
 /* Requires the Docker Pipeline plugin */
 pipeline {
-    agent { docker { image 'amazon/aws-cli' } }
+    agent { 
+        docker { 
+                    image 'amazon/aws-cli'
+                    args '--entrypoint='
+               } 
+        }
     stages {
         stage('build') {
             steps {
